# airust

./: Cargo.toml  Dockerfile  README.md  STARTUP.md  build.rs
knowledge/: train.json
src/: agent.rs  context_agent.rs  knowledge.rs  lib.rs  match_agent.rs  pdf_loader.rs  tfidf_agent.rs
src/web/: console.rs  db.rs  mod.rs  routes.rs  state.rs  vectordb.rs
src/web/bots/: crawler.rs  db.rs  mod.rs  models.rs  processor.rs  routes.rs  scheduler.rs  vectordb.rs
src/web/static/: index.html
tests/: integration.rs
