[package]
name = "airust"
version = "0.1.7"
default-run = "airust"
authors = ["LEVOGNE"]
edition = "2021"
description = "Trainable, modular AI engine in Rust with compile-time knowledge"
license = "MIT"
readme = "README.md"
keywords = ["ai", "machine-learning", "knowledge", "compile-time"]
categories = ["science", "development-tools::testing"]
documentation = "https://docs.rs/airust"
homepage = "https://github.com/LEVOGNE/airust"
repository = "https://github.com/LEVOGNE/airust"
 
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
strsim = "0.10"
indexmap = "1.9.1" 
colored = { version = "2.0", optional = true }
chrono = "0.4"
thiserror = "1.0"
unicode-normalization = "0.1"
regex = "1.5"
plotly = { version = "0.8", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
plotters = { version = "0.3", optional = true }
pdf_oxide = "0.3"
axum = { version = "0.7", features = ["multipart", "ws"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
scraper = { version = "0.21", optional = true }
sha2 = { version = "0.10", optional = true }
url = { version = "2", optional = true }

[features]
default = ["colors", "web"]
colors = ["dep:colored"]
plotting = ["dep:plotly", "dep:plotters"]
async = ["dep:tokio"]
bots = ["dep:reqwest", "dep:scraper", "dep:sha2", "dep:url"]
web = ["dep:axum", "dep:tower-http", "dep:tokio", "dep:rusqlite", "bots"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
serde_json = "1.0"

[lib]
name = "airust"
path = "src/lib.rs"

[[bin]]
name = "airust"
path = "src/bin/airust.rs"


[[bin]]
name = "pdf2kb"
path = "src/bin/pdf2kb.rs"

[[bin]]
name = "merge_kb"
path = "src/bin/merge_kb.rs"